--- a/coding-from-life-archive/css/main.css
+++ b/coding-from-life-archive/css/main.css
@@ -1,4 +1,4 @@
-html,body { width: 100%; height: 200%; }
+html,body { width: 100%; height: 100%; }
 
 /* Changing fonts */
 	@font-face {font-family: "FTB"; src: url("../fonts/FTB.ttf"); }
@@ -24,10 +24,10 @@ body{
 .home{
 	font-size:4vw;
 	top:10%;
-	left:26%;
+	left:0%;
 	color:#d1d1e0;
 	position:fixed;
-	text-align: center;
+	text-align: left;
 	padding-left:5%;
 
 }
@@ -36,17 +36,17 @@ body{
 }
 .threedimension{
 }
-.twodimension{
+/*.twodimension{
 	position: fixed;
 	width:12%;
 	top:42%;
 	right:25%;
 	background:white;
-}
+}*/
 .three{
 	font-size:2vw;
-	bottom:27%;
-	left:23.5%;
+	bottom:24%;
+	left:26.5%;
 	color:white;
 	position:absolute;
 }
@@ -101,7 +101,7 @@ body{
 }*/
 .two{
 	font-size:2vw;
-	bottom:27%;
+	bottom:24%;
 	right:23%;
 	position:fixed;
 	color:white;
@@ -113,7 +113,7 @@ body{
 #Layer_1{
 	transform: scale(0.2);
 	position: fixed;
-	top:38%;
+	top:33%;
 	left:25%;
 	stroke: white;
 	fill:none;
@@ -136,7 +136,7 @@ body{
 #Layer_2{
 	transform: scale(0.2);
 	position: absolute;
-	top:55%;
+	top:60%;
 	left:40%;
 	stroke: white;
 	-webkit-transform-origin-x: 0;
@@ -145,7 +145,7 @@ body{
 #Layer_4{
 	transform: scale(0.2);
 	position: absolute;
-	top:85%;
+	top:95%;
 	left:40%;
 	stroke: white;
 	-webkit-transform-origin-x: 0;
@@ -154,42 +154,169 @@ body{
 #Layer_5{
 	transform: scale(0.2);
 	position: absolute;
-	top:115%;
+	top:128%;
 	left:40%;
 	stroke: white;
 	-webkit-transform-origin-x: 0;
 	-webkit-transform-origin-y: 0;
 }
 #Layer_6{
-	transform: scale(0.2);
+	transform: scale(0.22);
 	position: absolute;
-	top:145%;
+	top:161%;
 	left:40%;
 	stroke: white;
 	-webkit-transform-origin-x: 0;
 	-webkit-transform-origin-y: 0;
 }
+#Layer_7{
+	transform: scale(0.12);
+	position: absolute;
+	top:195%;
+	left:44%;
+	stroke: white;
+	-webkit-transform-origin-x: 0;
+	-webkit-transform-origin-y: 0;
+}
+#Layer_8{
+	transform: scale(0.2);
+	position: absolute;
+	top:245%;
+	left:40%;
+	stroke: white;
+	-webkit-transform-origin-x: 0;
+	-webkit-transform-origin-y: 0;
+	padding-bottom: 50%;
+}
+#Layer_10{
+	transform: scale(0.23);
+	position: fixed;
+	top:28%;
+	left:26%;
+	stroke: white;
+	-webkit-transform-origin-x: 0;
+	-webkit-transform-origin-y: 0;
+	padding-bottom: 50%;
+}
+#Layer_11{
+	transform: scale(0.23);
+	position: absolute;
+	top:62%;
+	left:26%;
+	stroke: white;
+	-webkit-transform-origin-x: 0;
+	-webkit-transform-origin-y: 0;
+	padding-bottom: 50%;
+}
+#Layer_12{
+	transform: scale(0.09);
+	position: fixed;
+	top:62%;
+	left:65%;
+	stroke: white;
+	-webkit-transform-origin-x: 0;
+	-webkit-transform-origin-y: 0;
+	padding-bottom: 50%;
+}
+.layer13{
+	transform: scale(0.12);
+	position: fixed;
+	top:44%;
+	left:63%;
+	stroke: white;
+	-webkit-transform-origin-x: 0;
+	-webkit-transform-origin-y: 0;
+	padding-bottom: 50%;
+}
+.names{
+	font-size:1vw;
+	color:white;
+	text-align:left;
+}
+.names:hover{
+	color:#a3a3c2;
+}
+.evelin{
+	position: absolute;
+	top:47%;
+	left:54.5%;
+	transform:rotate(-15deg);
+}
+.yangchen{
+	position: absolute;
+	top:83%;
+	right:40%;
+	transform:rotate(-15deg);
+}
+.vincent{
+	position: absolute;
+	top:117.5%;
+	left:40%;
+	transform:rotate(16deg);
+}
+.emil{
+	position: absolute;
+	top:150%;
+	left:40%;
+	transform:rotate(16deg);
+}
+.khe{
+	position: absolute;
+	top:184.5%;
+	right:43%;
+}
+.emily{
+	position: absolute;
+	top:235%;
+	right:44%;
+}
+.yaren{
+	position: absolute;
+	top:270.5%;
+	right:40%;
+}
+.jahyun{
+	position: absolute;
+	top:45%;
+	left:50%;
+}
+.seowon{
+	position: absolute;
+	top:79%;
+	left:50%;
+}
+.soyeon{
+	position: absolute;
+	top:77%;
+	left:50%;
+}
+.esra{
+	position: absolute;
+	top:77%;
+	left:75%;
+}
+.vinny{
+	position: absolute;
+	top:79%;
+	left:75%;
+}
+.view{
+	font-size:3vw;
+	color:white;
+	text-align:left;
+}
 .front{
 	position: absolute;
-	width:22%;
-	height:17%;
-	bottom:20%;
-	left:25%;
-	background:white;
+	top:64%;
+	left:28%;
+}
+.top{
+	position: absolute;
+	top:30%;
+	left:28%;
 }
 .side{
 	position: absolute;
-	width:10%;
-	height:17%;
-	bottom:20%;
-	right:25%;
-	stroke: white;
-}
-.top2{
-	position: absolute;
-	width:22%;
-	height:17%;
-	top:30%;
-	left:25%;
-	background:white;
+	top:64%;
+	right:26.8%;
 }
