--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ html,body { width: 100%; height: 100%; }
 	@font-face {font-family: "FTB"; src: url("../fonts/FTB.ttf"); }
 	@font-face {font-family: "FTLC"; src: url("../fonts/FTLC.ttf"); }
 body{
-	background-color: #f9ecf2;
+	background-color: #a8999d;
 }
 .emily{
 	position: absolute;
@@ -15,20 +15,24 @@ body{
 	color:white;
 }
 .title{
-	font-size: 2vw;
-	font-family: FTB;
+	font-size: 25px;
+	font-family: Arial;
 	color:white;
 	text-align: center;
+	background-color:#afa1a5;
+	padding:15px;
 }
 .title:hover{
 	color:#ecc6d9;/*
   	cursor: pointer;*/
 }
 img{
-	transform: scale(0.2);
+	/*transform: scale(0.2);*/
+	position:absolute;
 }
 .one img {
 	opacity: 0;
+	transform: scale(0.2);
 }
 .one:hover img {
 	opacity: 1;
@@ -45,25 +49,38 @@ img{
 .click{
 	position: absolute;
 	top:30%;
-	left:10%;
+	left:50%;
+	text-align:center; 
+	display:inline-block;
+	transform: translate(-50%, -50%);
 }
 .personal{
 	position: absolute;
-	top:38%;
-	left:18%;
+	top:40%;
+	left:50%;
+	display:inline-block;
+	transform: translate(-50%, -50%);
 }
 .personalarchive{
 	position: absolute;
-	top:47%;
-	left:32%;
+	top:50%;
+	left:50%;
+	display:inline-block;
+	transform: translate(-50%, -50%);
 }
 .coding{
 	position: absolute;
-	top:57%;
-	right:29%;
+	top:60%;
+	left:50%;
+	display:inline-block;
+	transform: translate(-50%, -50%);
+
 }
 .codingarchive{
 	position: absolute;
-	top:68%;
-	right:10%;
+	top:70%;
+	left:50%;
+	display:inline-block;
+	transform: translate(-50%, -50%);
+
 }
