--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,40 @@ body{
 	color:#ecc6d9;/*
   	cursor: pointer;*/
 }
-img{
-	/*transform: scale(0.2);*/
+.a{
 	position:absolute;
+	top:25%;
+	left:30%;
+}
+.b{
+	position:absolute;
+	top:35%;
+	left:30%;
+}
+.c{
+	position:absolute;
+	top:45%;
+	left:30%;
+}
+.d{
+	position:absolute;
+	top:55%;
+	left:30%;
+}
+.e{
+	position:absolute;
+	top:65%;
+	left:30%;
+}
+.f{
+	position:absolute;
+	top:75%;
+	left:30%;
 }
 .one img {
 	opacity: 0;
-	transform: scale(0.2);
+	width:7%;
+	height:auto;
 }
 .one:hover img {
 	opacity: 1;
@@ -79,6 +106,14 @@ img{
 .codingarchive{
 	position: absolute;
 	top:70%;
+	left:50%;
+	display:inline-block;
+	transform: translate(-50%, -50%);
+
+}
+.archive{
+	position: absolute;
+	top:80%;
 	left:50%;
 	display:inline-block;
 	transform: translate(-50%, -50%);
