--- a/archive/css/main.css
+++ b/archive/css/main.css
@@ -184,9 +184,14 @@ body{
 	padding-right:120px;
 }
 .ak{
+	padding-top:45px;
+	padding-bottom:82px;
+	padding-right:120px;
+}
+.az{
 	padding-top:50px;
 	padding-bottom:78px;
-	padding-right:120px;
+	padding-right:100px;
 }
 
 .al{
@@ -203,65 +208,182 @@ body{
 .an{
 	padding-right:100px;
 	padding-top:70px;
-	padding-bottom: 45px;
+	padding-bottom: 55px;
 }
 .ao{
-	padding-right:120px;
-	padding-top:70px;
-	padding-bottom: 55px;
+	padding-right:130px;
+	padding-top:83px;
+	padding-bottom: 60px;
 }
 .ap{
 	padding-top:50px;
-	padding-bottom:60px;
+	padding-bottom:75px;
 	padding-right:110px;
 }
 
-
-
 .aq{
-	padding-top:65px;
-	padding-bottom: 30px;
-	padding-right:60px;
+	padding-top:46px;
+	padding-bottom:75px;
+	padding-right:102px;
 }
-.ar{
-	padding-top:20px;
-	padding-bottom: 20px;
+.b{
+	padding-right:105px;
+	padding-top:33px;
+	padding-bottom: 65px;
+}
+.bb{
+	padding-right:90px;
+	padding-top:35px;
+	padding-bottom: 65px;
+}
+.bc{
+	padding-right:110px;
+	padding-top:60px;
+	padding-bottom: 60px;
+}
+.bd{
+	padding-right:90px;
+	padding-top:40px;
+	padding-bottom: 60px;
+}
+.be{
+	padding-right:80px;
+	padding-top:40px;
+	padding-bottom: 40px;
+}
+.bf{
+	padding-right:60px;
+	padding-top:45px;
+	padding-bottom: 55px;
+}
+.c{
+	padding-right:68px;
+	padding-top:35px;
+	padding-bottom: 40px;
+}
+.ca{
+	padding-right:58px;
+	padding-top:35px;
+	padding-bottom: 40px;
+}
+.cb{
+	padding-right:85px;
+	padding-top:45px;
+	padding-bottom: 0px;
+}
+.cc{
 	padding-right:75px;
+	padding-top:70px;
+	padding-bottom: 40px;
 }
-.as{
-	padding-top:50px;
+.cd{
+	padding-right:90px;
+	padding-top:28px;
+	padding-bottom: 45px;
+}
+.ce{
+	padding-right:85px;
+	padding-top:30px;
 	padding-bottom: 35px;
-	padding-right:60px;
 }
-.at{
+.cf{
+	padding-right:108px;
 	padding-top:25px;
-	padding-bottom: 25px;
-	padding-right:60px;
+	padding-bottom: 45px;
 }
-.au{
+.cg{
+	padding-right:103px;
+	padding-top:25px;
+	padding-bottom: 30px;
+}
+.d{
+	padding-right:105px;
 	padding-top:55px;
-	padding-bottom: 35px;
-	padding-right:100px;
+	padding-bottom: 55px;
 }
-.av{
-	padding-top:35px;
-	padding-bottom: 20px;
+.da{
+	padding-right:105px;
+	padding-top:70px;
+	padding-bottom: 60px;
+}
+.db{
+	padding-right:90px;
+	padding-top:65px;
+	padding-bottom: 55px;
+}
+.dc{
+	padding-right:50px;
+	padding-top:83px;
+	padding-bottom: 90px;
+}
+.dd{
 	padding-right:75px;
+	padding-top:50px;
+	padding-bottom: 55px;
 }
-.aw{
-	padding-top:35px;
-	padding-bottom: 20px;
+.de{
 	padding-right:75px;
+	padding-top:85px;
+	padding-bottom: 60px;
 }
-/*.callig{
-	padding-right:200px;
-}*/
+.df{
+	padding-right:75px;
+	padding-top:90px;
+	padding-bottom: 60px;
+}
+
 .tab{
 	position: absolute;
 	text-align: center;
 	top:47%;
 	left:15px;
 	transform: rotate(-90deg);
+}
+
+.e{
+	padding-right:100px;
+	padding-top:40px;
+	padding-bottom: 45px;
+}
+.ea{
+	padding-right:100px;
+	padding-top:50px;
+	padding-bottom: 60px;
+}
+.eb{
+	padding-right:90px;
+	padding-top:45px;
+	padding-bottom: 55px;
+}
+.ec{
+	padding-right:85px;
+	padding-top:50px;
+	padding-bottom: 40px;
+}
+.ed{
+	padding-right:85px;
+	padding-top:60px;
+	padding-bottom: 40px;
+}
+.ee{
+	padding-right:75px;
+	padding-top:60px;
+	padding-bottom: 40px;
+}
+.ef{
+	padding-right:90px;
+	padding-top:60px;
+	padding-bottom: 30px;
+}
+.eg{
+	padding-right:110px;
+	padding-top:65px;
+	padding-bottom: 80px;
+}
+.eh{
+	padding-right:85px;
+	padding-top:70px;
+	padding-bottom: 5px;
 }
 .threewords{
 	position: absolute;
@@ -352,6 +474,7 @@ body{
 }
 .line1{
 	position: fixed;
+	transform: rotate(90deg);
 	border:0.5px solid lightgray;
 	width:40px;
 	right:105px;
@@ -359,6 +482,7 @@ body{
 }
 .line2{
 	position: fixed;
+	transform: rotate(90deg);
 	border:0.5px solid lightgray;
 	width:40px;
 	right:270px;
