Completed Inner Pages Need Fix Collection Allignment

--- a/archive/css/main.css
+++ b/archive/css/main.css
@@ -7,13 +7,20 @@ body{
 	margin:0;
 	font-family: FTB ;
 }
+.content{
+	position:absolute;
+	margin:0;
+	right:0;
+	width:1225px;
+	height:auto;
 
+}
 .pens{
 	position:absolute;
 	display: inline-block;
 	width:30%;
 	height:auto;
-	margin-right:0;
+	margin:0;
 	right:0px;
 	top:70px;
 }
@@ -39,36 +46,7 @@ body{
 	width:900px;
 	height: auto;
 }
-/*.pen{
-	top:20px;
-	left:0;
-	padding:45px;
 
-}
-.test{
-	position:absolute;
-	right:0;
-	float:left;
-}
-.inkline{
-	right:270px;
-	margin-top:100px;
-	margin-bottom: 100px;
-	width:700px;
-	height:auto;
-	position:absolute;
-	display:inline-block;
-	padding-bottom: 50px;
-}*/
-/*.inkline{
-	position: absolute;
-	top:20px;
-	width:1200px;
-	height:auto;
-	display: inline-block;
-	transform: scale(0.6);
-	padding-bottom: 45px;
-}*/
 .nav{
 	font-family: FTB ;
 	font-size: 15px;
@@ -89,18 +67,49 @@ body{
 .about:hover {
   border-bottom: 2px solid lightgray;
 }
-.collection{
+.ballcollection{
 	position:fixed;
 	float:left;
-	right:-14px;
+	right:-8px;
 	top:220px;
 	color:#848484;
 	display: inline-block;
 	transform: rotate(90deg); 
 	padding-bottom: 5px;
+	z-index: 5;
+}
+.ballcollection:hover {
+  border-bottom: 2px solid lightgray;
+}
+.collection{
+	position:fixed;
+	float:left;
+	right:26px;
+	top:190px;
+	color:#848484;
+	display: inline-block;
+	transform: rotate(90deg); 
+	padding-bottom: 5px;
+	z-index: 5;
 }
 .collection:hover {
   border-bottom: 2px solid lightgray;
+}
+.homee{
+	padding-bottom:40px;
+}
+.collection .list{
+	position:fixed;
+	visibility: hidden;
+	right:-137px;
+	z-index: 5;
+	top:440px;
+	padding-right:10px;
+	transform: rotate(90deg); 
+	color:#848484;
+}
+.collection:hover .list{
+	visibility:visible;
 }
 .title{
 	position:fixed;
@@ -124,7 +133,7 @@ body{
 .home{
 	position:fixed;
 	z-index: 3;
-	left:-15px;
+	/*left:-15px;*/
 	transform: scale(0.4);
 	margin:0;
 }
@@ -213,7 +222,7 @@ body{
 .ao{
 	padding-right:130px;
 	padding-top:83px;
-	padding-bottom: 60px;
+	padding-bottom: 80px;
 }
 .ap{
 	padding-top:50px;
@@ -228,7 +237,7 @@ body{
 }
 .b{
 	padding-right:105px;
-	padding-top:33px;
+	padding-top:55px;
 	padding-bottom: 65px;
 }
 .bb{
@@ -299,7 +308,7 @@ body{
 .d{
 	padding-right:105px;
 	padding-top:55px;
-	padding-bottom: 55px;
+	padding-bottom: 32px;
 }
 .da{
 	padding-right:105px;
@@ -409,20 +418,40 @@ body{
 
 .indivphoto{
 	position: absolute;
-	width:850px;
+	bottom:0;
+	top:0;
 	height:auto;
-	right:5%;
-	bottom:5%;
-	margin-right:30px;
-	margin-bottom: 20px;
-	top:15%;
+	width:100%;
+	left:0;
 }
+
 .indivbody{
-	position: absolute;
+	position: fixed;
 	font-family: FTB;
 	font-size:30px;
-	top:20%;
-	left:20%;
+	bottom:60px;
+	right:130px;
+}
+.indivbody2{
+	position: fixed;
+	font-family: FTB;
+	font-size:30px;
+	top:90px;
+	left:200px;
+}
+.indivbody3{
+	position: fixed;
+	font-family: FTB;
+	font-size:30px;
+	top:90px;
+	right:200px;
+}
+.indivbody4{
+	position: fixed;
+	font-family: FTB;
+	font-size:30px;
+	bottom:60px;
+	left:130px;
 }
 
 @media (max-width: 950px) {
@@ -455,36 +484,65 @@ body{
   }
 }
 
-.arrowleft{
-	transform:scale(2);
+.arrowgroup{
 	position:fixed;
+	transform: scale(2);
+	width:10px;
+	height:50px;
+	right:50px;
+	bottom:85px;
+}
+/*.arrow{
+	position:absolute;
 	transform: rotate(90deg);
 	bottom:5%;
-	right:100px;
 	color:lightgray;
+}*/
+.left{
+	right:0;
 }
 
-.arrowright{
-	transform:scale(3);
-	transform: rotate(90deg);
-	position:fixed;
-	right:300px;
-	bottom:5%;
-	color:lightgray;
+.right{
+	left:0;
+	bottom:0;
 }
-.line1{
-	position: fixed;
-	transform: rotate(90deg);
-	border:0.5px solid lightgray;
-	width:40px;
-	right:105px;
-	bottom:38px;
+/*.arrow1{
+	bottom:10px;
+}*/
+.arrowdown{
+	position:absolute;
+	width: 0; 
+	height: 0; 
+	border-left: 4px solid transparent;
+	border-right: 4px solid transparent;
+	border-bottom: 8px solid black;
+	bottom:50px;
 }
-.line2{
-	position: fixed;
+/*.arrowdown:hover{
+	border:lightgray;
+}*/
+.arrowup{
+	position:absolute;
+	width: 0; 
+  	height: 0; 
+  	border-left: 4px solid transparent;
+  	border-right: 4px solid transparent;
+  	border-bottom: 8px solid black;
+  	transform: rotate(180deg);
+  	bottom:0px;
+}
+
+.line{
+	position: absolute;
 	transform: rotate(90deg);
-	border:0.5px solid lightgray;
+	border:1px solid lightgray;
 	width:40px;
-	right:270px;
-	bottom:38px;
+}
+.one{
+	bottom:0;
+	right:10px;
+}
+.two{
+	right:0;
+	bottom:0;
 }
