--- a/masterpiece/css/main.css
+++ b/masterpiece/css/main.css
@@ -1,65 +1,165 @@
-html,body { width: 100%; height: 300%; }
-
+/*html,body { width: 100%; height: 300%; }
+*/
 /* Changing fonts */
 	@font-face {font-family: "FTB"; src: url("../fonts/FTB.ttf"); }
 	@font-face {font-family: "FTLC"; src: url("../fonts/FTLC.ttf"); }
 body{
 	margin:0;
 	font-family: FTB ;
+	overflow-x:hidden;
 }
 
 #content{
  	width:100%;
- 	height:auto;
+ 	height: 100vh;
  	left:10%;
  	right:10%;
 }
+
 .usfixed{
 	position:fixed;
 	width:70%;
+	margin-top: 100px;
 	left:15%;
 	right:15%;
 	height:auto;
-	top:25%;
-
+/*	top:25%;
+*/
 }
 
 .usscrollgroupwhole{
 	position:absolute;
-	left:10%;
-	width:100%;
-	height:auto;
-	top:25%;
+	left:15%;
+	width:73%;
+	height:100vh;
+/*	margin-top: 100px;
+	overflow-y: hidden;*/
 }
 
-.usscroll1{
-	position: absolute;
 
-/*	display: inline-block;*/
-
-	left:3.5%;
-	width:3.2%;
-	height:300%;
+.usscroll{
+	position: relative;
+	left:4.3%;
+	width:4.37%;
+	height:100%;
+	float: left;
+	bottom:0;
+	overflow-x: hidden;
+	padding-bottom: 100px;
 }
+
+.usscroll1 {
+	margin-right:4.375%;
+}
+
+
+.usscrollimage{
+	bottom:0;
+	/*overflow-x:hidden;*/
+	overflow-y:scroll;
+}
+.usscroll1image{
+	width: 100%;
+	height: 1000px;
+}
+.usscroll2image{
+	width: 97.2%;
+	height: 1000px;
+/*	left:6%;*/
+}
+.usscroll3image{
+	width: 101.4%;
+	height: 1000px;
+}
+.usscroll4image{
+	width: 101.5%;
+	height: 1000px;
+}
+.usscroll5image{
+	width: 99.9%;
+	height: 1000px;
+}
+.usscroll6image{
+	width: 99.8%;
+	height: 1000px;
+}
+.usscroll7image{
+	width: 98.35%;
+	height: 1000px;
+	left:5%;
+}
+
 .usscroll1 img{
 	width:100%;
 	height:auto;
-	overflow-x:hidden;
-	overflow-y:scroll;
+	padding-top: 100px;
+	padding-bottom:260px;
+	z-index: 3;
 }
-/*.usscroll{
-	position: absolute;
-	display: inline-block;
-	left:0;
-	width:80%;
-	height:auto;
-	top:0;
+
+.yuanscrollgroupwhole{
+	position:absolute;
+	/*left:0;*/
+	/*top:0%;*/
+	width:100%;
+	height:100%;
+	top:100px;
 
 }
-.usone{
-	left:0;
-	top:0;
+.yuanscroll{
+	position: relative;
+	/*left:0%;*/
+	margin-bottom:3%;
+/*left:90%;*/
+	width:100%;
+	height:6.3%;
+/*	width:100%;
+	height:6.3%;*/
+	overflow-y: hidden;
+
 }
-.ustwo{
-	top:50px;
-}*/
+.yuanscroll img{
+	position: relative;
+	left:70%;
+	padding-left:10%;
+	padding-right:18%;
+	width:auto;
+	height:100%;
+	display: inline-block;
+
+}
+.yuanscrollimage{
+	top:0;
+	overflow-x:scroll;
+	overflow-y:hidden;
+
+}
+.yuanscroll1image{
+	width: 2000px;
+	height: 100%;
+
+	/*width: 2000px;
+	height: 100%;*/
+
+}
+.hstrokes1{
+	position: absolute;
+    height: 1px;
+    border: 0;
+    border-top: 2px solid lightgray;
+    right:0;
+    bottom:0;
+    z-index: 8;
+    width:40px;
+   /* padding-bottom: 10%;*/
+}
+.vstrokes1{
+	position: absolute;
+    height: 40px;
+    border: 0;
+    border-right: 2px solid lightgray;
+    left:49%;
+    top:0;
+    z-index: 8;
+    width:1px;
+}
